Add footer to contact.html
Added footer section with copyright information.

--- a/contact.html
+++ b/contact.html
@@ -111,5 +111,9 @@
         </div>
       </div>
     </section>
+    <footer style="text-align: center; color: #ccc; margin-top: 2rem">
+      <h4>@FeikaaWD 2025</h4>
+    </footer>
   </body>
 </html>
+
