--- a/tentang.html
+++ b/tentang.html
@@ -66,5 +66,9 @@
         </ul>
       </div>
     </section>
+    <footer style="text-align: center; color: #ccc; margin-top: 2rem">
+      <h4>@FeikaaWD 2025</h4>
+    </footer>
   </body>
 </html>
+
