--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Portfolio Website</title>
+    <title>Moh. Faiqul Kamil</title>
   </head>
   <body>
     <header>
@@ -54,5 +54,6 @@
     </footer>
   </body>
 </html>
+
 
 
