--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header>
-      <a href="#" class="logo">Feika</a>
+      <a href="index.html" class="logo">Feika</a>
       <input type="checkbox" id="menu-toggle" />
       <label for="menu-toggle" class="menu-icon">
         <i class="fa-solid fa-bars"></i>
@@ -54,6 +54,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
