Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <a href="https://www.facebook.com/faiq.putracengkal"
             ><i class="fa-brands fa-facebook"></i
           ></a>
-          <a href="https://github.com/FeikaaWD"
+          <a href="https://github.com/FeikaaD"
             ><i class="fa-brands fa-github"></i
           ></a>
           <a href="https://www.instagram.com/wtfaiq_/"
@@ -54,6 +54,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
